fix spacing

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -21,7 +21,7 @@ body {
 
 .box h3 {
   font-weight: normal;
-  font-size: 30;
+  font-size: 35;
 }
 
 .header {
